src/objects/loan__Loan_account_Due_Details__c.object
<CustomObject>
    <description>Invoices/bills for customer loans.</description>
    <fields>
        <fullName>Payment_Created_On__c</fullName>
        <label>Payment Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Amount__c</fullName>
        <formula>loan__Due_Amt__c -  loan__Payment_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Compounding_Interest_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Compounding Interest Billed (+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__DD_Primary_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Due_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Amount</description>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Date__c</fullName>
        <description>Due date of the due.</description>
        <inlineHelpText>Due Date of the Due</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Type_Description__c</fullName>
        <description>Description of Due, to be shown on UI</description>
        <label>Due Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Due_Type__c</fullName>
        <description>Due Type Id</description>
        <label>Due Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Billed__c</fullName>
        <label>Billed Interest (=)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Paid__c</fullName>
        <label>Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Late_Charge_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Charge Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Dues_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Payment Amount.</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Date__c</fullName>
        <description>Payment Date.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Billed__c</fullName>
        <description>Billed Principal Amount.</description>
        <label>Billed Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Paid__c</fullName>
        <label>Paid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Regular_Interest_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Regular Interest Billed (+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Remarks__c</fullName>
        <description>Remarks for bill amount calculation.</description>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Rescheduled_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked that means this bills was marked as not enabled as part of Rescheduled transaction posted on this loan account.</description>
        <inlineHelpText>If this flag is checked that means this bills was marked as not enabled as part of Rescheduled transaction posted on this loan account.</inlineHelpText>
        <label>Is Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Tolerance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is will be populated on billing based on the tolerance defined on Loan account.</description>
        <inlineHelpText>Populated from loan account on the basis of tolerance defined.</inlineHelpText>
        <label>Tolerance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <description>Transaction date</description>
        <inlineHelpText>Date on which the transaction got created.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Bills</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Due Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>